--- a/dotfiles/i3/.config/i3/config
+++ b/dotfiles/i3/.config/i3/config
@@ -181,15 +181,15 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {        
         colors {
-        background #141a21
-        statusline #141a21
-        separator #4b5262
+        background #282828
+        statusline #928374
+        separator #ebdbb2
 
 		# colour of border, background, and text
-        focused_workspace	#2b5278	#2b5278	#dedede
-        active_workspace	#2b5278	#2b5278	#dedede
-        inactive_workspace	#141a21	#141a21	#dddddd
-        urgent_workspace	#943600	#943600	#fefefe
+        focused_workspace	#7c6f64	#3c3836	#ebdbb2
+        active_workspace	#3c3836	#282828	#ebdbb2
+        inactive_workspace	#3c3836	#282828	#ebdbb2
+        urgent_workspace	#ebdbb2	#7c6f64	#ebdbb2
      }
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
         # status_command i3status
@@ -199,9 +199,9 @@ bar {
 
 #Style
 # colour of border, background, text, indicator, and child_border
-client.focused          #272727             #272727            #FFFFFF    #FFFF00
-client.unfocused        #404552             #404552            #AAAAAA    #ffff00
-client.focused_inactive #404552             #404552            #AAAAAA    #ffff00
+client.focused          #282828             #282828            #ebdbb2    #FFFF00
+client.unfocused        #3c3836             #3c3836            #bdae93    #ffff00
+client.focused_inactive #3c3836             #3c3836            #bdae93    #ffff00
 client.urgent           #990000             #990000            #FFFF00    #ffff00
 
 
