Fixed audio line

--- a/dotfiles/i3/.config/i3/i3blocks.conf
+++ b/dotfiles/i3/.config/i3/i3blocks.conf
@@ -1,4 +1,3 @@
-
 align=left
 separator=false
 separator_block_width=10
@@ -11,7 +10,7 @@ interval=1
 
 [audio]
 markup=pango
-command=echo "<span background='#3c3836'>  $(amixer sget Master | grep 'Right:' | awk -F'[][]' '{ print $2 }') </span>"
+command=echo "<span background='#3c3836'>  $(amixer sget Master | grep 'Front Right:' | awk -F'[][]' '{ print $2 }') </span>"
 interval=1
 
 [ip]
