--- a/dotfiles/polybar/.config/polybar/config.ini
+++ b/dotfiles/polybar/.config/polybar/config.ini
@@ -24,12 +24,12 @@ secondary = #b8bb26
 alert = #cc241d
 
 [values]
-padding = 2
+padding = 1
 
 [bar/bar1]
 monitor = DP-0
 width = 100%
-height = 30
+height = 25
 ; offset-x = 1%
 ; offset-y = 1%
 radius = 0.0
@@ -47,19 +47,19 @@ border-color = #000
 padding-left = 0
 padding-right = 0
 
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 1 
+module-margin-right = 1 
 
 font-0 = JetBrainsMono Nerd Font:size=10
 font-1 = Font Awesome 5 Brands
-font-2 = Font Awesome 5 Free
+font-2 = FontAwesome 5 Free
 font-3 = FontAwesome
 ; font-1 = fixed:pixelsize=10;1
 ; font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-3 = siji:pixelsize=10;1
 
 modules-left = timer alsa player-mpris-simple
-modules-center = bspwm i3
+modules-center = i3
 modules-right = filesystem xkeyboard memory cpu ip eth date
 ; modules = battery mpd xbacklight pulseaudio wlan xwindow available-updates powermenu
 
@@ -80,7 +80,7 @@ bottom = true
 [bar/bar2]
 monitor = HDMI-0
 width = 100%
-height = 30 
+height = 25 
 radius = 0.0
 fixed-center = true
 
@@ -94,9 +94,9 @@ border-size = 0
 border-color = #00000000
 
 padding-left = 0
-padding-right = 2
+padding-right = 0
 
-module-margin-left = 1
+module-margin-left = 0
 module-margin-right = 1
 
 font-0 = JetBrainsMono Nerd Font:size=10.5
@@ -105,7 +105,7 @@ font-2 = Font Awesome 5 Free
 font-3 = FontAwesome
 
 ;modules-left = alsa
-modules-center = bspwm i3
+modules-center = i3
 modules-right = temperature date
 
 wm-restack = i3
@@ -118,6 +118,33 @@ tray-padding = 2
 
 bottom = true
 
+[bar/laptop]
+width = 100%
+height = 30 
+radius = 0.0
+fixed-center = true
+
+font-0 = JetBrainsMono Nerd Font:size=10
+font-1 = Font Awesome 5 Brands
+font-2 = FontAwesome 5 Free
+font-3 = FontAwesome
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 2 
+line-color = #f00 
+
+padding-left = 0 
+padding-right = 2 
+
+module-margin-left = 1 
+module-margin-right = 1
+
+modules-center = i3
+modules-right = cpu xkeyboard battery date
+
+bottom = true
 ;---------------------------
 ; Modules label-unfocused-padding = 2
 ;---------------------------
@@ -221,6 +248,17 @@ label-separator = |
 [module/i3]
 type = internal/i3
 
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-default = 10;
+
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
@@ -230,30 +268,31 @@ pin-workspaces = true
 
 strip-wsnumbers = true
 
-label-mode-padding = 2
+label-mode-padding = ${values.padding}
 label-mode-foreground = ${colors.primary}
 label-mode-background = ${colors.secondary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = "%index% %icon% " 
 label-focused-foreground = ${colors.primary}
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.secondary}
 label-focused-padding = ${values.padding}
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
-label-unfocused-padding = 2
+label-unfocused = "%index% %icon% "
 label-unfocused-foreground = ${colors.primary}
+label-unfocused-padding = ${values.padding}
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = "%index% %icon% "
+label-visible-foreground = ${colors.primary}
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
+label-visible-padding = ${values.padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index% %icon%
+label-urgent = "%index% %icon% "
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
@@ -374,9 +413,9 @@ bar-volume-foreground-6 = #ff5555
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
-bar-volume-fill = ─
+bar-volume-fill = -
 bar-volume-fill-font = 2
-bar-volume-empty = ─
+bar-volume-empty = -
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
@@ -403,9 +442,9 @@ bar-volume-gradient = true
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
 bar-volume-indicator-foreground = ${colors.primary}
-bar-volume-fill = ─
+bar-volume-fill = -
 bar-volume-fill-font = 2
-bar-volume-empty = ─
+bar-volume-empty = -
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.primary}
 label-separator = |
@@ -464,12 +503,20 @@ full-at = 98
 
 format-charging = <animation-charging>  <label-charging>
 format-charging-underline = ${colors.secondary}
+format-padding = ${values.padding}
+format-unerline = ${values.padding}
+format-background = ${colors.background-alt}
+format-foreground = ${colors.priamry}
 
 format-discharging = <animation-discharging>  <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
+format-discharging-unerline = ${values.padding}
+format-discharging-background = ${colors.background-alt}
+format-discharging-foreground = ${colors.priamry}
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
+
+format-full-prefix = "  "
+format-full-prefix-foreground = ${colors.foreground}
 format-full-underline = ${self.format-charging-underline}
 
 ramp-capacity-0 = 
@@ -482,13 +529,13 @@ animation-charging-0 = 
 animation-charging-1 = 
 ; animation-charging-4 = 
 animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-foreground = ${colors.foreground}
 animation-charging-framerate = 750
 
 animation-discharging-0 = 
 animation-discharging-1 = 
 animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
+animation-discharging-foreground = ${colors.foreground}
 animation-discharging-framerate = 3500
 
 [module/powermenu]
