--- a/dotfiles/i3/.config/i3/config
+++ b/dotfiles/i3/.config/i3/config
@@ -143,6 +143,9 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# don't focus opened workspace
+focus_on_window_activation none
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -220,6 +223,9 @@ exec_always --no-startup-id "setxkbmap -layout 'us,de' -variant ',qwerty' -optio
 #Turn on numlock
 exec --no-startup-id numlockx on
 
+#Start up dunst
+exec_always --no-startup-id dunst
+
 #Setup Monitor Layout
 exec --no-startup-id "xrandr --output HDMI-0 --auto --right-of DP-0"
 exec --no-startup-id "xrandr --output DP-0 --primary"
@@ -228,9 +234,14 @@ exec --no-startup-id "echo 'on' > /home/lukas/LocalDocuments/Scripts/screen-stat
 #Set Background
 exec_always --no-startup-id feh --bg-fill ~/.config/i3/f26.png
 
+#Start picom for background blur
+exec --no-startup-id picom -b --experimental-backend --config ~/.config/picom/picom.conf
+
 #Setup workspaces
 assign [class="discord"] $ws2
-for_window [class="Spotify"] move to workspace  $ws2
+for_window [class="Thunderbird"] move to workspace $ws9
+for_window [class="Signal"] move to workspace $ws2
+for_window [class="Spotify"] move to workspace  $ws4
 
 workspace $ws2 output HDMI-0
 workspace $ws4 output HDMI-0
