--- a/dotfiles/polybar/.config/polybar/config.ini
+++ b/dotfiles/polybar/.config/polybar/config.ini
@@ -182,6 +182,7 @@ format-padding = ${values.padding}
 type = custom/script
 
 exec = ~/.config/i3/ipcheck 10
+interval = 20
 tail = true
 
 label =   %output%
@@ -257,7 +258,7 @@ ws-icon-5 = 6;
 ws-icon-6 = 7;
 ws-icon-7 = 8;
 ws-icon-8 = 9;
-ws-icon-default = 10;
+ws-icon-default = 
 
 format = <label-state> <label-mode>
 index-sort = true
