Added discord and nvim to blurred windows

--- a/dotfiles/picom/.config/picom/picom.conf
+++ b/dotfiles/picom/.config/picom/picom.conf
@@ -126,7 +126,7 @@ active-opacity = 1.0
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
+opacity-rule = [ "95:name *= 'Discord'", "90:name *= 'nvim'"];
 
 
 #################################
