Added bat and minor i3 improvements

--- a/dotfiles/i3/.config/i3/config
+++ b/dotfiles/i3/.config/i3/config
@@ -223,6 +223,9 @@ exec_always --no-startup-id "setxkbmap -layout 'us,de' -variant ',qwerty' -optio
 #Turn on numlock
 exec --no-startup-id numlockx on
 
+#Start discord 
+exec "flatpak run com.discordapp.Discord"
+
 #Start up dunst
 exec_always --no-startup-id dunst
 
