--- a/dotfiles/picom/.config/picom/picom.conf
+++ b/dotfiles/picom/.config/picom/picom.conf
@@ -192,6 +192,7 @@ blur-kern = "3x3box";
 # Exclude conditions for background blur.
 blur-background-exclude = [
   "class_g = 'slop'", # allows screenshotting with maim
+  "class_g = 'Polybar'",
   "name *= 'rect-overlay'", # allows screensharing in teams
 ];
 # blur-background-exclude = [
