--- a/dotfiles/polybar/.config/polybar/config.ini
+++ b/dotfiles/polybar/.config/polybar/config.ini
@@ -32,7 +32,7 @@ width = 100%
 height = 25
 ; offset-x = 1%
 ; offset-y = 1%
-radius = 0.0
+radius = 5
 fixed-center = true
 
 background = ${colors.background}
@@ -41,8 +41,8 @@ foreground = ${colors.foreground}
 line-size = 2
 line-color = #f00
 
-border-size = 0
-border-color = #000
+border-size = 7
+border-color = #00000000
 
 padding-left = 0
 padding-right = 0
@@ -81,7 +81,7 @@ bottom = true
 monitor = HDMI-0
 width = 100%
 height = 25 
-radius = 0.0
+radius = 7 
 fixed-center = true
 
 background = ${colors.background}
@@ -90,7 +90,7 @@ foreground = ${colors.foreground}
 line-size = 2
 line-color = #f00
 
-border-size = 0
+border-size = 4
 border-color = #00000000
 
 padding-left = 0
