Showing download speed on second monitor

--- a/dotfiles/polybar/.config/polybar/config.ini
+++ b/dotfiles/polybar/.config/polybar/config.ini
@@ -106,7 +106,7 @@ font-3 = FontAwesome
 
 ;modules-left = alsa
 modules-center = i3
-modules-right = temperature date
+modules-right = eth temperature date
 
 wm-restack = i3
 
